test-http-deps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: http-backend
  name: http-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-backend
  template:
    metadata:
      labels:
        app: http-backend
    spec:
      containers:
      - image: birgelee/fast-api-test:10   # Edit this for your reponame
        name: http-backend
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 100Mi
            cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-backend
  name: http-backend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: http-backend
  type: ClusterIP
