test-http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: http-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: testing.local
    http:
      paths:
      - path: /mpic
        pathType: Exact
        backend:
          service:
            name: http-backend
            port:
              number: 80
  tls:
  # This secret must exist beforehand
  # The cert must also contain the subj-name grpctest.dev.mydomain.com
  # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/PREREQUISITES.md#tls-certificates
  - secretName: foo-secret
    hosts:
      - testing.local
